filebeat: ignore_older=1h

--- a/base_python/bootstrap/filebeat.tmpl
+++ b/base_python/bootstrap/filebeat.tmpl
@@ -15,6 +15,7 @@ filebeat:
       fields:
         source_type: python_json
       fields_under_root: true
+      ignore_older: 1h
     - paths:
         - '${LOG_DIR}/*.log'
         - '/var/log/supervisor/supervisord.log'
@@ -24,6 +25,7 @@ filebeat:
         static: true
         source_type: raw
       fields_under_root: true
+      ignore_older: 1h
 fields:
   CONTAINER_TYPE: '${CONTAINER_TYPE}'
 fields_under_root: true
