Filebeat: add volume for registry

--- a/base_python/bootstrap/filebeat.tmpl
+++ b/base_python/bootstrap/filebeat.tmpl
@@ -9,6 +9,7 @@ output:
     index: fbeat
 
 filebeat:
+  registry_file: /filebeat/registry.json
   prospectors:
     - paths:
         - "${LOG_DIR}/*.json_log"
