--- a/base_python/bootstrap/filebeat.tmpl
+++ b/base_python/bootstrap/filebeat.tmpl
@@ -2,7 +2,7 @@ output:
   logstash:
     enabled: true
     hosts:
-      - '${LOGSTASH_HOST:192.168.88.34}:${LOGSTASH_PORT:13002}'
+      - '${LOGSTASH_HOST:logstash}:${LOGSTASH_PORT:5044}'
     ssl:
       verification_mode: none
     timeout: 15
