filebeat config to 7.x

--- a/base_python/bootstrap/filebeat.tmpl
+++ b/base_python/bootstrap/filebeat.tmpl
@@ -10,8 +10,8 @@ output:
     index: fbeat
 
 filebeat:
-  registry_file: /filebeat/registry.json
-  prospectors:
+  registry.path: /filebeat/registry.json
+  inputs:
     - paths:
         - "${LOG_DIR}/*.json_log"
       fields:
